started to add validation set but realized is not neccessary

--- a/Lab5/Lab 5.ipynb
+++ b/Lab5/Lab 5.ipynb
@@ -3432,6 +3432,7 @@
     "# global model variables\n",
     "X_train_master = []\n",
     "X_test_master = []\n",
+    "X_val_master = []\n",
     "all_inputs = []\n",
     "\n",
     "# wide branch variables\n",
@@ -3449,13 +3450,16 @@
     "\n",
     "        X_crossed_train = X_train[i][cols].apply(lambda x: '_'.join(x), axis=1)\n",
     "        X_crossed_test = X_test[i][cols].apply(lambda x: '_'.join(x), axis=1)\n",
+    "        X_crossed_val = X_val[i][cols].apply(lambda x: '_'.join(x), axis=1)\n",
     "        \n",
-    "        enc.fit(np.hstack((X_crossed_train.values,  X_crossed_test.values)))\n",
+    "        enc.fit(np.hstack((X_crossed_train.values,  X_crossed_test.values, X_crossed_val.values)))\n",
     "        X_crossed_train = enc.transform(X_crossed_train)\n",
     "        X_crossed_test = enc.transform(X_crossed_test)\n",
+    "        X_crossed_val = enc.transform(X_crossed_val)\n",
     "        \n",
     "        X_ints_train.append( X_crossed_train )\n",
     "        X_ints_test.append( X_crossed_test )\n",
+    "        X_ints_val.append( X_crossed_val )\n",
     "        \n",
     "        if(run_once):\n",
     "            N_list.append(max(X_ints_train[-1]+1))\n",
@@ -3464,9 +3468,11 @@
     "    for col in feature_columns:\n",
     "        X_ints_train.append(X_train[i][col].values )\n",
     "        X_ints_test.append(X_test[i][col].values )\n",
+    "        X_ints_val.append(X_val[i][col].values )\n",
     "        \n",
     "    X_train_master.append(X_ints_train)\n",
     "    X_test_master.append(X_ints_test)\n",
+    "    X_val_master.append(X_ints_val)\n",
     "    run_once = False\n",
     "    \n",
     "# create the wide branches\n",
@@ -4784,7 +4790,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
