fix prev commit

--- a/Lab6/Lab6-init.ipynb
+++ b/Lab6/Lab6-init.ipynb
@@ -1270,8 +1270,8 @@
    "source": [
     "%%time\n",
     "\n",
-    "y_train_ohe = keras.utils.to_categorical(y_train, 43)\n",
-    "y_test_ohe = keras.utils.to_categorical(y_test, 43)\n",
+    "y_train_ohe_tr = keras.utils.to_categorical(y_train_tr, 43)\n",
+    "y_test_ohe_tr = keras.utils.to_categorical(y_test_tr, 43)\n",
     "\n",
     "# make a 3 layer keras MLP\n",
     "mlp = Sequential()\n",
@@ -1291,7 +1291,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mlp.fit(X_train, y_train_ohe, \n",
+    "mlp.fit(X_train_tr, y_train_ohe_tr, \n",
     "        batch_size=32, epochs=150, \n",
     "        shuffle=True, verbose=0)"
    ]
