--- a/Lab6/Lab6-init.ipynb
+++ b/Lab6/Lab6-init.ipynb
@@ -239,19 +239,13 @@
     "    n = 0\n",
     "    for i in rand_sample:\n",
     "        plt.subplot(n_row, n_col, n + 1)\n",
-    "        plt.imshow(images[i][0])\n",
+    "        plt.imshow(images[i])\n",
+    "#         plt.imshow(np.transpose(images[i], (2, 1, 0)), interpolation='nearest')\n",
     "        plt.title(title[i], size=12)\n",
     "        plt.xticks(())\n",
     "        plt.yticks(())\n",
     "        n = n+1"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -504,36 +498,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'\\n1. Is the way we are feeding data into CNN correct?\\n2. Reccomendations on structures that will work well with our data? How to go about constructing them?\\n3. Which params exactly are the ones we should tune?\\n4. How would we go about data expansion if we use the preprocessed pickle files? Can we perform on data8\\n   which has shuffling, histogram equalization, and mean + std normalization? (not flattened)\\n5. Ask about which activation functions should be linear or relu\\n6. If we use the \"validation_data\" param, as seen below (curently uses the test data to validate), do we \\n   need to use a third validation data set? If so, then where do we predict that? After the fit?\\n'"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "## QUESTIONS ##\n",
-    "'''\n",
-    "1. Is the way we are feeding data into CNN correct?\n",
-    "2. Reccomendations on structures that will work well with our data? How to go about constructing them?\n",
-    "3. Which params exactly are the ones we should tune?\n",
-    "4. How would we go about data expansion if we use the preprocessed pickle files? Can we perform on data8\n",
-    "   which has shuffling, histogram equalization, and mean + std normalization? (not flattened)\n",
-    "5. Ask about which activation functions should be linear or relu\n",
-    "6. If we use the \"validation_data\" param, as seen below (curently uses the test data to validate), do we \n",
-    "   need to use a third validation data set? If so, then where do we predict that? After the fit?\n",
-    "'''"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -780,7 +744,11 @@
     "         verbose=1,\n",
     "         validation_data=(X_test_tr,y_test_ohe_tr),\n",
     "         callbacks=[EarlyStopping(monitor='val_loss', patience=2)]\n",
-    "        )"
+    "        )\n",
+    "\n",
+    "y_pred1 = cnn1.predict(X_test_tr)\n",
+    "fpr_1, tpr_1, thresholds_1 = roc_curve(y_test_tr, y_pred1)\n",
+    "auc_1 = auc(fpr_1, tpr_1)"
    ]
   },
   {
@@ -1115,7 +1083,11 @@
     "         verbose=1,\n",
     "         validation_data=(X_test_tr,y_test_ohe_tr),\n",
     "         callbacks=[EarlyStopping(monitor='val_loss', patience=2)]\n",
-    "        )"
+    "        )\n",
+    "\n",
+    "y_pred2 = cnn2.predict(X_test_tr)\n",
+    "fpr_2, tpr_2, thresholds_2 = roc_curve(y_test_tr, y_pred2)\n",
+    "auc_2 = auc(fpr_2, tpr_2)"
    ]
   },
   {
@@ -1222,6 +1194,37 @@
     "INIT ARCHCITECTURE\n",
     "'''\n",
     "img_sz = 32 # width and height of img\n",
+    "\n",
+    "# cnn3 = Sequential()\n",
+    "# num_filt_layers = [24, 48]\n",
+    "# for num_filters in num_filt_layers:\n",
+    "#     cnn3.add( Conv2D(filters=num_filters, \n",
+    "#                      kernel_size=(4,4), \n",
+    "#                      padding='same',\n",
+    "#                      data_format=\"channels_first\") \n",
+    "#             )\n",
+    "#     cnn3.add( Activation('relu'))\n",
+    "#     cnn3.add( MaxPooling2D(pool_size=(2, 2), data_format=\"channels_first\") )\n",
+    "\n",
+    "# num_filt_layers = [96, 128]\n",
+    "# for num_filters in num_filt_layers:\n",
+    "#     cnn3.add( Conv2D(filters=num_filters, \n",
+    "#                      kernel_size=(3,3), \n",
+    "#                      padding='same',\n",
+    "#                      data_format=\"channels_first\") \n",
+    "#             )\n",
+    "#     cnn3.add( Activation('relu'))\n",
+    "#     cnn3.add( MaxPooling2D(pool_size=(2, 2), data_format=\"channels_first\") )\n",
+    "\n",
+    "# cnn3.add( Flatten() )\n",
+    "# cnn3.add( Dense(100, activation='linear') )\n",
+    "# cnn3.add( Dense(100, activation='linear') )\n",
+    "# cnn3.add( Dense(50, activation='linear') )\n",
+    "# cnn3.add( Dense(43, activation='softmax') )\n",
+    "\n",
+    "# cnn3.compile(loss='mean_squared_error',\n",
+    "#               optimizer='rmsprop',\n",
+    "#               metrics=['accuracy'])\n",
     "\n",
     "cnn3 = Sequential()\n",
     "\n",
@@ -1631,7 +1634,11 @@
     "         verbose=1,\n",
     "         validation_data=(X_test_tr,y_test_ohe_tr),\n",
     "         callbacks=[EarlyStopping(monitor='val_loss', patience=4)]\n",
-    "        )"
+    "        )\n",
+    "\n",
+    "y_pred3 = cnn3.predict(X_test_tr)\n",
+    "fpr_3, tpr_3, thresholds_3 = roc_curve(y_test_tr, y_pred3)\n",
+    "auc_3 = auc(fpr_3, tpr_3)"
    ]
   },
   {
@@ -1728,69 +1735,100 @@
     "'''\n",
     "img_sz = 32 # width and height of img\n",
     "\n",
-    "cnn3 = Sequential()\n",
+    "# cnn4 = Sequential()\n",
+    "# num_filt_layers = [24, 48]\n",
+    "# for num_filters in num_filt_layers:\n",
+    "#     cnn4.add( Conv2D(filters=num_filters, \n",
+    "#                      kernel_size=(4,4), \n",
+    "#                      padding='same',\n",
+    "#                      data_format=\"channels_first\") \n",
+    "#             )\n",
+    "#     cnn4.add( Activation('relu'))\n",
+    "#     cnn4.add( MaxPooling2D(pool_size=(2, 2), data_format=\"channels_first\") )\n",
+    "\n",
+    "# num_filt_layers = [96, 128]\n",
+    "# for num_filters in num_filt_layers:\n",
+    "#     cnn4.add( Conv2D(filters=num_filters, \n",
+    "#                      kernel_size=(3,3), \n",
+    "#                      padding='same',\n",
+    "#                      data_format=\"channels_first\") \n",
+    "#             )\n",
+    "#     cnn4.add( Activation('relu'))\n",
+    "#     cnn4.add( MaxPooling2D(pool_size=(2, 2), data_format=\"channels_first\") )\n",
+    "\n",
+    "# cnn4.add( Flatten() )\n",
+    "# cnn4.add( Dense(100, activation='linear') )\n",
+    "# cnn4.add( Dense(100, activation='linear') )\n",
+    "# cnn4.add( Dense(50, activation='linear') )\n",
+    "# cnn4.add( Dense(43, activation='softmax') )\n",
+    "\n",
+    "# cnn4.compile(loss='mean_squared_error',\n",
+    "#               optimizer='rmsprop',\n",
+    "#               metrics=['accuracy'])\n",
+    "\n",
+    "cnn4 = Sequential()\n",
     "\n",
     "# 1st Convolutional Layer w/pool\n",
-    "cnn3.add(Conv2D(filters=128, \n",
+    "cnn4.add(Conv2D(filters=128, \n",
     "                kernel_size=(3,3), \n",
     "                padding='same',\n",
     "                data_format=\"channels_first\"))\n",
-    "cnn3.add(Activation('relu'))\n",
-    "cnn3.add(MaxPooling2D(pool_size=(3,3), data_format=\"channels_first\"))\n",
+    "cnn4.add(Activation('relu'))\n",
+    "cnn4.add(MaxPooling2D(pool_size=(3,3), data_format=\"channels_first\"))\n",
     "\n",
     "# 2nd Convolutional Layer w/pool\n",
-    "cnn3.add(Conv2D(filters=256, \n",
+    "cnn4.add(Conv2D(filters=256, \n",
     "                  kernel_size=(5,5), \n",
     "                  padding='same',\n",
     "                  data_format=\"channels_first\"))\n",
-    "cnn3.add(Activation('relu'))\n",
-    "cnn3.add(MaxPooling2D(pool_size=(2,2), data_format=\"channels_first\"))\n",
+    "cnn4.add(Activation('relu'))\n",
+    "cnn4.add(MaxPooling2D(pool_size=(2,2), data_format=\"channels_first\"))\n",
     "\n",
     "# 3rd Convolutional Layer\n",
-    "cnn3.add(Conv2D(filters=512, \n",
+    "cnn4.add(Conv2D(filters=512, \n",
     "                 kernel_size=(4,4),  \n",
     "                 padding='same',\n",
     "                 data_format=\"channels_first\"))\n",
-    "cnn3.add(Activation('relu'))\n",
+    "cnn4.add(Activation('relu'))\n",
     "\n",
     "# 4th Convolutional Layer\n",
-    "cnn3.add(Conv2D(filters=256, \n",
+    "cnn4.add(Conv2D(filters=256, \n",
     "                 kernel_size=(3,3),  \n",
     "                 padding='same',\n",
     "                 data_format=\"channels_first\"))\n",
-    "cnn3.add(Activation('relu'))\n",
+    "cnn4.add(Activation('relu'))\n",
     "\n",
     "# 5th Convolutional Layer w/pool\n",
-    "cnn3.add(Conv2D(filters=128, \n",
+    "cnn4.add(Conv2D(filters=128, \n",
     "                 kernel_size=(3,3), \n",
     "                 padding='same',\n",
     "                 data_format=\"channels_first\"))\n",
-    "cnn3.add(Activation('relu'))\n",
-    "cnn3.add(MaxPooling2D(pool_size=(2,2), data_format=\"channels_first\"))\n",
+    "cnn4.add(Activation('relu'))\n",
+    "cnn4.add(MaxPooling2D(pool_size=(2,2), data_format=\"channels_first\"))\n",
     "\n",
     "\n",
     "# Passing to fully connected layer\n",
-    "cnn3.add(Flatten())\n",
+    "cnn4.add(Flatten())\n",
     "# 1st fully Connected Layer\n",
-    "cnn3.add(Dense(256, activation='linear'))\n",
+    "cnn4.add(Dense(256, activation='linear'))\n",
     "# cnn3.add(Activation('relu'))\n",
-    "cnn3.add(Dropout(0.4))\n",
+    "cnn4.add(Dropout(0.4))\n",
     "\n",
     "# 2nd fully connected Layer\n",
-    "cnn3.add(Dense(128, activation='linear'))\n",
+    "cnn4.add(Dense(128, activation='linear'))\n",
     "# cnn3.add(Activation('relu'))\n",
-    "cnn3.add(Dropout(0.4))\n",
+    "cnn4.add(Dropout(0.4))\n",
     "\n",
     "# 3rd fully connected Layer\n",
-    "cnn3.add(Dense(64, activation='linear'))\n",
+    "cnn4.add(Dense(64, activation='linear'))\n",
     "# cnn3.add(Activation('relu'))\n",
-    "cnn3.add(Dropout(0.4))\n",
+    "cnn4.add(Dropout(0.4))\n",
     "\n",
     "# Output Layer\n",
-    "cnn3.add(Dense(43, activation='softmax'))\n",
+    "cnn4.add(Dense(43, activation='softmax'))\n",
     "# cnn3.add(Activation('softmax'))\n",
     "\n",
-    "cnn3.compile(loss='mean_squared_error',\n",
+    "cnn4.compile(loss='mean_squared_error',\n",
     "              optimizer='rmsprop',\n",
     "              metrics=['accuracy']) "
    ]
@@ -2130,7 +2168,11 @@
     "         verbose=1,\n",
     "         validation_data=(X_test_tr,y_test_ohe_tr),\n",
     "         callbacks=[EarlyStopping(monitor='val_loss', patience=2)]\n",
-    "        )"
+    "        )\n",
+    "\n",
+    "y_pred4 = cnn4.predict(X_test_tr)\n",
+    "fpr_4, tpr_4, thresholds_4 = roc_curve(y_test_tr, y_pred4)\n",
+    "auc_4 = auc(fpr_4, tpr_4)"
    ]
   },
   {
@@ -2208,6 +2250,43 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Comparison of all CNNs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(12,12))\n",
+    "\n",
+    "#plot halfway line\n",
+    "plt.plot([0,1], [0,1], 'k--')\n",
+    "\n",
+    "#plot model 1 ROC\n",
+    "plt.plot(fpr_1, tpr_1, label='Arch 1 Param 1 (area = {:.3f})'.format(auc_1))\n",
+    "\n",
+    "#plot model 2 ROC\n",
+    "plt.plot(fpr_2, tpr_2, label='Arch 1 Param 2 (area = {:.3f})'.format(auc_2))\n",
+    "\n",
+    "#plot model 3 ROC\n",
+    "plt.plot(fpr_3, tpr_3, label='Arch 2 Param 1 (area = {:.3f})'.format(auc_3))\n",
+    "\n",
+    "#plot model 4 ROC\n",
+    "plt.plot(fpr_4, tpr_4, label='Arch 2 Param 2 (area = {:.3f})'.format(auc_4))\n",
+    "\n",
+    "plt.xlabel('False Positive Rate')\n",
+    "plt.ylabel('True Positive Rate')\n",
+    "plt.title('All CNN ROC curves')\n",
+    "plt.legend(loc='best')\n",
+    "plt.show()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -2426,7 +2505,11 @@
     "mlp.fit(X_train_tr, y_train_ohe_tr, \n",
     "        batch_size=32, epochs=50, \n",
     "        shuffle=True, verbose=1,\n",
-    "        )"
+    "        )\n",
+    "\n",
+    "y_pred_mlp = mlp.predict(X_test_tr)\n",
+    "fpr_mlp, tpr_mlp, thresholds_mlp = roc_curve(y_test_tr, y_pred_mlp)\n",
+    "auc_mlp = auc(fpr_mlp, tpr_mlp)"
    ]
   },
   {
@@ -2456,7 +2539,27 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "plt.figure(figsize=(12,12))\n",
+    "\n",
+    "#plot halfway line\n",
+    "plt.plot([0,1], [0,1], 'k--')\n",
+    "\n",
+    "############ CHANGE HERE CHANGE HERE CHANGE HERE ############\n",
+    "############ CHANGE TO BEST CNN\n",
+    "\n",
+    "#plot best CNN ROC\n",
+    "plt.plot(fpr_3, tpr_3, label='CNN (area = {:.3f})'.format(auc_3))\n",
+    "\n",
+    "#plot MLP ROC\n",
+    "plt.plot(fpr_mlp, tpr_mlp, label='MLP (area = {:.3f})'.format(auc_mlp))\n",
+    "\n",
+    "plt.xlabel('False Positive Rate')\n",
+    "plt.ylabel('True Positive Rate')\n",
+    "plt.title('Wide and Deep vs MLP ROC curve')\n",
+    "plt.legend(loc='best')\n",
+    "plt.show()"
+   ]
   }
  ],
  "metadata": {
