liam cleanup changes 1

--- a/Lab7/Untitled.ipynb
+++ b/Lab7/Untitled.ipynb
@@ -1,6 +1,76 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Lab 7 - Recurrent Neural Networks\n",
+    "##### By. Liam Lowsley-Williams & Fernando Vazquez"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Business Understanding"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Introduction"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Motivations"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Objectives"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Evaluation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Init"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 19,
    "metadata": {},
@@ -32,16 +102,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "'2.3.1'"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -72,8 +149,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Data Preperation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -229,7 +318,7 @@
        "[14337 rows x 4 columns]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -241,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -252,8 +341,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
+   "execution_count": 5,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -272,7 +363,7 @@
        "Length: 14337, dtype: object"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -280,6 +371,26 @@
    "source": [
     "X_data = data[\"ReviewTitle\"].map(str) + \" \" + data[\"ReviewBody\"]\n",
     "X_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5074"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_data.map(lambda x: len(x)).max()"
    ]
   },
   {
@@ -387,8 +498,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Evaluation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Model 1"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -684,32 +814,14 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "\n",
-    "max_review_length = 927\n",
-    "EMBED_SIZE = 50\n",
-    "input_holder = Input(shape=(X_train.shape[1], ))\n",
-    "input_embed = Embedding((np.max(X_train)+1), # input dimension (max int of OHE)\n",
-    "                EMBED_SIZE, # output dimension size\n",
-    "                input_length=max_review_length)(input_holder) # number of words in each sequence\n",
-    "\n",
-    "\n",
-    "x = LSTM(25,dropout=0.2, recurrent_dropout=0.2)(input_embed)\n",
-    "x = Dense(NUM_CLASSES, activation='sigmoid')(x)\n",
-    "rnn=Model(inputs=input_holder,outputs=x)\n",
-    "rnn.compile(loss='binary_crossentropy', \n",
-    "            optimizer='rmsprop', \n",
-    "            metrics=['accuracy'])\n",
-    "\n",
-    "rnn.summary()"
-   ]
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "gputest",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "gputest"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
