--- a/Lab7/Untitled.ipynb
+++ b/Lab7/Untitled.ipynb
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -102,23 +102,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Using TensorFlow backend.\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
        "'2.3.1'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -129,7 +122,7 @@
     "from keras.preprocessing.sequence import pad_sequences\n",
     "from keras.models import Sequential, Input, Model\n",
     "from keras.layers import Dense\n",
-    "from keras.layers import SimpleRNN, LSTM\n",
+    "from keras.layers import SimpleRNN, LSTM, GRU\n",
     "from keras.layers.embeddings import Embedding\n",
     "from keras.callbacks import EarlyStopping\n",
     "\n",
@@ -375,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -384,18 +377,16 @@
        "5074"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "X_data.map(lambda x: len(x)).max()"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -403,17 +394,17 @@
      "output_type": "stream",
      "text": [
       "Found 12156 unique tokens. Distilled to 12156 top words.\n",
-      "Shape of data tensor: (14337, 1000)\n",
-      "Shape of label tensor: (14337, 6)\n",
+      "Shape of data tensor: (14337, 868)\n",
+      "Shape of label tensor: (14337, 5)\n",
       "12156\n",
-      "Wall time: 684 ms\n"
+      "Wall time: 630 ms\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
     "NUM_TOP_WORDS = None\n",
-    "MAX_ART_LEN = 1000 # maximum and minimum number of words\n",
+    "MAX_ART_LEN = X_data.map(lambda x: len(x.split())).max() # maximum and minimum number of words\n",
     "NUM_CLASSES = 5\n",
     "\n",
     "tokenizer = Tokenizer(num_words=NUM_TOP_WORDS)\n",
@@ -428,8 +419,9 @@
     "X = pad_sequences(sequences, maxlen=MAX_ART_LEN)\n",
     "# X = pad_sequences(sequences)\n",
     "\n",
-    "\n",
     "y_ohe = keras.utils.to_categorical(y)\n",
+    "y_ohe = y_ohe[:,1:]\n",
+    "\n",
     "print('Shape of data tensor:', X.shape)\n",
     "print('Shape of label tensor:', y_ohe.shape)\n",
     "print(np.max(X))"
@@ -437,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -452,7 +444,7 @@
        "       [   0,    0,    0, ...,   82,  298,  208]])"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -463,15 +455,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(11469, 1000) (11469, 5)\n",
-      "(2868, 1000) (2868, 5)\n",
+      "(11469, 868) (11469, 5)\n",
+      "(2868, 868) (2868, 5)\n",
       "[1994.  751. 1203. 2551. 4970.]\n",
       "[ 499.  188.  300.  638. 1243.]\n"
      ]
@@ -483,10 +475,6 @@
     "X_train, X_test, y_train, y_test = train_test_split(X, y_ohe, test_size=0.2,\n",
     "                                                              stratify=y, \n",
     "                                                              random_state=42)\n",
-    "\n",
-    "# get rid of empty column at begginning\n",
-    "y_train = y_train[:,1:]\n",
-    "y_test = y_test[:,1:]\n",
     "\n",
     "print(X_train.shape,y_train.shape)\n",
     "print(X_test.shape,y_test.shape)\n",
@@ -525,51 +513,115 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"sequential_12\"\n",
+      "_________________________________________________________________\n",
+      "Layer (type)                 Output Shape              Param #   \n",
+      "=================================================================\n",
+      "embedding_7 (Embedding)      (None, 868, 150)          130200    \n",
+      "_________________________________________________________________\n",
+      "simple_rnn_1 (SimpleRNN)     (None, 100)               25100     \n",
+      "_________________________________________________________________\n",
+      "dense_7 (Dense)              (None, 5)                 505       \n",
+      "=================================================================\n",
+      "Total params: 155,805\n",
+      "Trainable params: 155,805\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n",
+      "None\n"
+     ]
+    }
+   ],
    "source": [
-    "max_review_length = 927\n",
-    "EMBED_SIZE = 50\n",
-    "input_holder = Input(shape=(X_train.shape[1], ))\n",
-    "input_embed = Embedding((np.max(X_train)+1), # input dimension (max int of OHE)\n",
-    "                EMBED_SIZE, # output dimension size\n",
-    "                input_length=max_review_length)(input_holder) # number of words in each sequence\n",
+    "max_review_length = MAX_ART_LEN\n",
+    "EMBED_SIZE = 150\n",
+    "embedding_layer = Embedding(X_train.shape[1],\n",
+    "                            EMBED_SIZE,\n",
+    "                            input_length=MAX_ART_LEN)\n",
     "\n",
-    "\n",
-    "x = SimpleRNN(25,dropout=0.2, recurrent_dropout=0.2)(input_embed)\n",
-    "x = Dense(NUM_CLASSES, activation='sigmoid')(x)\n",
-    "rnn=Model(inputs=input_holder,outputs=x)\n",
+    "rnn = Sequential()\n",
+    "rnn.add(embedding_layer)\n",
+    "rnn.add(SimpleRNN(100,dropout=0.2, recurrent_dropout=0.2))\n",
+    "rnn.add(Dense(NUM_CLASSES, activation='sigmoid'))\n",
     "rnn.compile(loss='categorical_crossentropy', \n",
-    "            optimizer='rmsprop', \n",
-    "            metrics=['accuracy'])\n",
-    "\n",
-    "rnn.summary()"
+    "              optimizer='rmsprop', \n",
+    "              metrics=['accuracy'])\n",
+    "print(rnn.summary())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "rnn.fit(X_train, y_train, validation_data=(X_test, y_test), epochs=3, batch_size=64)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\liaml\\Anaconda3\\envs\\gputest\\lib\\site-packages\\tensorflow_core\\python\\framework\\indexed_slices.py:424: UserWarning: Converting sparse IndexedSlices to a dense Tensor of unknown shape. This may consume a large amount of memory.\n",
+      "  \"Converting sparse IndexedSlices to a dense Tensor of unknown shape. \"\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train on 11469 samples, validate on 2868 samples\n",
+      "Epoch 1/15\n",
+      "11469/11469 [==============================] - 124s 11ms/step - loss: 1.5591 - accuracy: 0.2987 - val_loss: 1.4131 - val_accuracy: 0.4334\n",
+      "Epoch 2/15\n",
+      "11469/11469 [==============================] - 123s 11ms/step - loss: 1.4191 - accuracy: 0.4248 - val_loss: 1.3652 - val_accuracy: 0.4404\n",
+      "Epoch 3/15\n",
+      "11469/11469 [==============================] - 123s 11ms/step - loss: 1.3504 - accuracy: 0.4567 - val_loss: 1.3187 - val_accuracy: 0.4609\n",
+      "Epoch 4/15\n",
+      "11469/11469 [==============================] - 122s 11ms/step - loss: 1.3069 - accuracy: 0.4693 - val_loss: 1.2865 - val_accuracy: 0.4878\n",
+      "Epoch 5/15\n",
+      "11469/11469 [==============================] - 122s 11ms/step - loss: 1.2811 - accuracy: 0.4758 - val_loss: 1.2679 - val_accuracy: 0.4819\n",
+      "Epoch 6/15\n",
+      "11469/11469 [==============================] - 122s 11ms/step - loss: 1.2530 - accuracy: 0.4884 - val_loss: 1.2415 - val_accuracy: 0.5077\n",
+      "Epoch 7/15\n",
+      "11469/11469 [==============================] - 123s 11ms/step - loss: 1.2262 - accuracy: 0.5023 - val_loss: 1.1919 - val_accuracy: 0.5300\n",
+      "Epoch 8/15\n",
+      "11469/11469 [==============================] - 121s 11ms/step - loss: 1.2038 - accuracy: 0.5115 - val_loss: 1.2373 - val_accuracy: 0.5164\n",
+      "Epoch 9/15\n",
+      "11469/11469 [==============================] - 123s 11ms/step - loss: 1.1974 - accuracy: 0.5119 - val_loss: 1.2045 - val_accuracy: 0.5129\n",
+      "Epoch 10/15\n",
+      "11469/11469 [==============================] - 123s 11ms/step - loss: 1.1796 - accuracy: 0.5216 - val_loss: 1.2255 - val_accuracy: 0.5108\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<keras.callbacks.callbacks.History at 0x196383b7648>"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "rnn.fit(X_train, y_train, \n",
     "        epochs=15, \n",
     "        batch_size=64, \n",
     "        validation_data=(X_test, y_test), \n",
-    "        callbacks=[EarlyStopping(monitor='val_loss', patience=2)]\n",
+    "        callbacks=[EarlyStopping(monitor='val_loss', patience=3)]\n",
     "       )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -590,7 +642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -598,8 +650,8 @@
      "output_type": "stream",
      "text": [
       "Found 400000 word vectors.\n",
-      "(12157, 100)\n",
-      "Wall time: 10.9 s\n"
+      "(12157, 200)\n",
+      "Wall time: 20.8 s\n"
      ]
     }
    ],
@@ -609,10 +661,10 @@
     "# tokenizer = Tokenizer(num_words=NUM_TOP_WORDS)\n",
     "# word_index = tokenizer.word_index\n",
     "\n",
-    "EMBED_SIZE = 100\n",
+    "EMBED_SIZE = 200\n",
     "# the embed size should match the file you load glove from\n",
     "embeddings_index = {}\n",
-    "f = open('./glove/glove.6B.100d.txt', encoding=\"utf8\")\n",
+    "f = open('./glove/glove.6B.200d.txt', encoding=\"utf8\")\n",
     "# save key/array pairs of the embeddings\n",
     "#  the key of the dictionary is the word, the array is the embedding\n",
     "for line in f:\n",
@@ -638,43 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "len(embeddings_index)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1000"
-      ]
-     },
-     "execution_count": 43,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "MAX_ART_LEN"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -687,37 +703,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"sequential_2\"\n",
+      "Model: \"sequential_6\"\n",
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
-      "embedding_2 (Embedding)      (None, None, 100)         1215700   \n",
+      "embedding_5 (Embedding)      (None, 868, 200)          2431400   \n",
       "_________________________________________________________________\n",
-      "lstm_2 (LSTM)                (None, 100)               80400     \n",
+      "lstm_2 (LSTM)                (None, 100)               120400    \n",
       "_________________________________________________________________\n",
       "dense_2 (Dense)              (None, 5)                 505       \n",
       "=================================================================\n",
-      "Total params: 1,296,605\n",
-      "Trainable params: 80,905\n",
-      "Non-trainable params: 1,215,700\n",
+      "Total params: 2,552,305\n",
+      "Trainable params: 2,552,305\n",
+      "Non-trainable params: 0\n",
       "_________________________________________________________________\n",
       "None\n"
      ]
     }
    ],
    "source": [
-    "rnn = Sequential()\n",
-    "rnn.add(embedding_layer)\n",
-    "rnn.add(LSTM(100,dropout=0.2, recurrent_dropout=0.2))\n",
-    "rnn.add(Dense(NUM_CLASSES, activation='sigmoid'))\n",
-    "rnn.compile(loss='categorical_crossentropy', \n",
+    "rnn2 = Sequential()\n",
+    "rnn2.add(embedding_layer)\n",
+    "rnn2.add(LSTM(300,dropout=0.2, recurrent_dropout=0.2))\n",
+    "rnn2.add(Dense(NUM_CLASSES, activation='sigmoid'))\n",
+    "rnn2.compile(loss='categorical_crossentropy', \n",
     "              optimizer='rmsprop', \n",
     "              metrics=['accuracy'])\n",
     "print(rnn.summary())"
@@ -734,21 +750,29 @@
      "text": [
       "Train on 11469 samples, validate on 2868 samples\n",
       "Epoch 1/15\n",
-      "11469/11469 [==============================] - 105s 9ms/step - loss: 0.8867 - accuracy: 0.6291 - val_loss: 0.9367 - val_accuracy: 0.6231\n",
+      "11469/11469 [==============================] - 140s 12ms/step - loss: 1.2587 - accuracy: 0.4978 - val_loss: 1.0633 - val_accuracy: 0.5662\n",
       "Epoch 2/15\n",
-      "11469/11469 [==============================] - 105s 9ms/step - loss: 0.8752 - accuracy: 0.6334 - val_loss: 0.9221 - val_accuracy: 0.6231\n",
+      "11469/11469 [==============================] - 140s 12ms/step - loss: 1.0585 - accuracy: 0.5642 - val_loss: 1.0018 - val_accuracy: 0.6011\n",
       "Epoch 3/15\n",
-      "11469/11469 [==============================] - 104s 9ms/step - loss: 0.8632 - accuracy: 0.6389 - val_loss: 0.9103 - val_accuracy: 0.6266\n",
+      "11469/11469 [==============================] - 139s 12ms/step - loss: 1.0083 - accuracy: 0.5838 - val_loss: 0.9961 - val_accuracy: 0.6050\n",
       "Epoch 4/15\n",
-      "11469/11469 [==============================] - 104s 9ms/step - loss: 0.8514 - accuracy: 0.6433 - val_loss: 0.9146 - val_accuracy: 0.6273\n",
+      "11469/11469 [==============================] - 140s 12ms/step - loss: 0.9519 - accuracy: 0.6027 - val_loss: 0.9447 - val_accuracy: 0.6199\n",
       "Epoch 5/15\n",
-      "11469/11469 [==============================] - 104s 9ms/step - loss: 0.8357 - accuracy: 0.6538 - val_loss: 0.9250 - val_accuracy: 0.6311\n"
+      "11469/11469 [==============================] - 148s 13ms/step - loss: 0.9134 - accuracy: 0.6164 - val_loss: 0.9445 - val_accuracy: 0.6179\n",
+      "Epoch 6/15\n",
+      "11469/11469 [==============================] - 147s 13ms/step - loss: 0.8796 - accuracy: 0.6295 - val_loss: 0.9316 - val_accuracy: 0.6280\n",
+      "Epoch 7/15\n",
+      "11469/11469 [==============================] - 146s 13ms/step - loss: 0.8488 - accuracy: 0.6455 - val_loss: 0.9065 - val_accuracy: 0.6374\n",
+      "Epoch 8/15\n",
+      "11469/11469 [==============================] - 138s 12ms/step - loss: 0.9681 - accuracy: 0.6080 - val_loss: 0.9530 - val_accuracy: 0.6203\n",
+      "Epoch 9/15\n",
+      "11469/11469 [==============================] - 135s 12ms/step - loss: 0.8809 - accuracy: 0.6371 - val_loss: 0.9177 - val_accuracy: 0.6335\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.callbacks.callbacks.History at 0x1f087b40288>"
+       "<keras.callbacks.callbacks.History at 0x19632e187c8>"
       ]
      },
      "execution_count": 44,
@@ -757,7 +781,7 @@
     }
    ],
    "source": [
-    "rnn.fit(X_train, \n",
+    "rnn2.fit(X_train, \n",
     "        y_train, \n",
     "        epochs=15, \n",
     "        batch_size=64,\n",
@@ -768,53 +792,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Train on 11469 samples, validate on 2868 samples\n",
-      "Epoch 1/15\n",
-      "11469/11469 [==============================] - 106s 9ms/step - loss: 0.8303 - accuracy: 0.6525 - val_loss: 0.9156 - val_accuracy: 0.6325\n",
-      "Epoch 2/15\n",
-      "11469/11469 [==============================] - 106s 9ms/step - loss: 0.8147 - accuracy: 0.6613 - val_loss: 0.9140 - val_accuracy: 0.6381\n",
-      "Epoch 3/15\n",
-      "11469/11469 [==============================] - 106s 9ms/step - loss: 0.8058 - accuracy: 0.6637 - val_loss: 0.9140 - val_accuracy: 0.6370\n",
-      "Epoch 4/15\n",
-      "11469/11469 [==============================] - 105s 9ms/step - loss: 0.7980 - accuracy: 0.6663 - val_loss: 0.9300 - val_accuracy: 0.6412\n",
-      "Epoch 5/15\n",
-      "11469/11469 [==============================] - 105s 9ms/step - loss: 0.7886 - accuracy: 0.6773 - val_loss: 0.9149 - val_accuracy: 0.6370\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<keras.callbacks.callbacks.History at 0x1f09df7fbc8>"
-      ]
-     },
-     "execution_count": 45,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "rnn.fit(X_train, \n",
-    "        y_train, \n",
-    "        epochs=15, \n",
-    "        batch_size=64,\n",
-    "        validation_data=(X_test, y_test),\n",
-    "        callbacks=[EarlyStopping(monitor='val_loss', patience=3)]\n",
-    "       )"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "rnn2.save_weights('model_2_weights.h5')"
+   ]
   }
  ],
  "metadata": {
