--- a/Lab7/Untitled.ipynb
+++ b/Lab7/Untitled.ipynb
@@ -37,7 +37,20 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "- sentiment analysis\n",
+    "    - beginnings of sentiment analyzer\n",
+    "    - scale 1-5\n",
+    "    - \n",
+    "    \n",
+    "- tech based reviews on bluetooth headphones for targeted marketing analysis \n",
+    "    - tech based\n",
+    "    - use on blogs, reviews, and any other form of review/documentation to obtain sentiment for further business analysis\n",
+    "    - automated review sentiment analyzer/collector\n",
+    "    \n",
+    "- given above targeted use case, could be expanded to other product categories as well\n",
+    "    - expand to categories such as consumer appliances or clothing\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -72,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -102,16 +115,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "'2.3.1'"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -151,11 +171,13 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "For our data set we chose to combine the two columns \"ReviewTitle\" and \"ReviewBody\" to "
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -311,7 +333,7 @@
        "[14337 rows x 4 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -323,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -334,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "scrolled": true
    },
@@ -356,7 +378,7 @@
        "Length: 14337, dtype: object"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -368,25 +390,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "5074"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -397,7 +408,7 @@
       "Shape of data tensor: (14337, 868)\n",
       "Shape of label tensor: (14337, 5)\n",
       "12156\n",
-      "Wall time: 630 ms\n"
+      "Wall time: 605 ms\n"
      ]
     }
    ],
@@ -429,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -444,7 +455,7 @@
        "       [   0,    0,    0, ...,   82,  298,  208]])"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -455,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -502,17 +513,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": []
   },
   {
@@ -611,7 +613,7 @@
     }
    ],
    "source": [
-    "rnn.fit(X_train, y_train, \n",
+    "history1 = rnn.fit(X_train, y_train, \n",
     "        epochs=15, \n",
     "        batch_size=64, \n",
     "        validation_data=(X_test, y_test), \n",
@@ -642,7 +644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -651,7 +653,7 @@
      "text": [
       "Found 400000 word vectors.\n",
       "(12157, 200)\n",
-      "Wall time: 20.8 s\n"
+      "Wall time: 20.1 s\n"
      ]
     }
    ],
@@ -736,7 +738,7 @@
     "rnn2.compile(loss='categorical_crossentropy', \n",
     "              optimizer='rmsprop', \n",
     "              metrics=['accuracy'])\n",
-    "print(rnn.summary())"
+    "print(rnn2.summary())"
    ]
   },
   {
@@ -781,7 +783,7 @@
     }
    ],
    "source": [
-    "rnn2.fit(X_train, \n",
+    "history2 = rnn2.fit(X_train, \n",
     "        y_train, \n",
     "        epochs=15, \n",
     "        batch_size=64,\n",
@@ -798,6 +800,179 @@
    "source": [
     "rnn2.save_weights('model_2_weights.h5')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### RNN With Second Chain"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "embedding_layer3 = Embedding(len(word_index) + 1,\n",
+    "                            EMBED_SIZE,\n",
+    "                            weights=[embedding_matrix],\n",
+    "                            input_length=MAX_ART_LEN,\n",
+    "                            trainable=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"sequential_2\"\n",
+      "_________________________________________________________________\n",
+      "Layer (type)                 Output Shape              Param #   \n",
+      "=================================================================\n",
+      "embedding_1 (Embedding)      (None, 868, 200)          2431400   \n",
+      "_________________________________________________________________\n",
+      "lstm_3 (LSTM)                (None, 868, 100)          120400    \n",
+      "_________________________________________________________________\n",
+      "lstm_4 (LSTM)                (None, 100)               80400     \n",
+      "_________________________________________________________________\n",
+      "dense_2 (Dense)              (None, 5)                 505       \n",
+      "=================================================================\n",
+      "Total params: 2,632,705\n",
+      "Trainable params: 201,305\n",
+      "Non-trainable params: 2,431,400\n",
+      "_________________________________________________________________\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "rnn3 = Sequential()\n",
+    "rnn3.add(embedding_layer3)\n",
+    "rnn3.add(LSTM(100,dropout=0.2, recurrent_dropout=0.2, return_sequences=True))\n",
+    "rnn3.add(LSTM(100,dropout=0.2, recurrent_dropout=0.2))\n",
+    "rnn3.add(Dense(NUM_CLASSES, activation='sigmoid'))\n",
+    "rnn3.compile(loss='categorical_crossentropy', \n",
+    "              optimizer='rmsprop', \n",
+    "              metrics=['accuracy'])\n",
+    "print(rnn3.summary())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train on 11469 samples, validate on 2868 samples\n",
+      "Epoch 1/15\n",
+      "11469/11469 [==============================] - 290s 25ms/step - loss: 1.2208 - accuracy: 0.5101 - val_loss: 1.2166 - val_accuracy: 0.5087\n",
+      "Epoch 2/15\n",
+      "11469/11469 [==============================] - 291s 25ms/step - loss: 1.0685 - accuracy: 0.5641 - val_loss: 1.0175 - val_accuracy: 0.5837\n",
+      "Epoch 3/15\n",
+      "11469/11469 [==============================] - 289s 25ms/step - loss: 1.0713 - accuracy: 0.5681 - val_loss: 1.0789 - val_accuracy: 0.5642\n",
+      "Epoch 4/15\n",
+      "11469/11469 [==============================] - 287s 25ms/step - loss: 0.9890 - accuracy: 0.5929 - val_loss: 1.0043 - val_accuracy: 0.6046\n",
+      "Epoch 5/15\n",
+      "11469/11469 [==============================] - 287s 25ms/step - loss: 0.9777 - accuracy: 0.5987 - val_loss: 1.0966 - val_accuracy: 0.5544\n",
+      "Epoch 6/15\n",
+      "11469/11469 [==============================] - 291s 25ms/step - loss: 0.9434 - accuracy: 0.6110 - val_loss: 0.9366 - val_accuracy: 0.6210\n",
+      "Epoch 7/15\n",
+      "11469/11469 [==============================] - 291s 25ms/step - loss: 0.9193 - accuracy: 0.6227 - val_loss: 0.9401 - val_accuracy: 0.6070\n",
+      "Epoch 8/15\n",
+      "11469/11469 [==============================] - 294s 26ms/step - loss: 0.8996 - accuracy: 0.6294 - val_loss: 0.9778 - val_accuracy: 0.6220\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<keras.callbacks.callbacks.History at 0x1baa6502e88>"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "history3 = rnn3.fit(X_train, \n",
+    "        y_train, \n",
+    "        epochs=15, \n",
+    "        batch_size=64,\n",
+    "        validation_data=(X_test, y_test),\n",
+    "        callbacks=[EarlyStopping(monitor='val_loss', patience=2)]\n",
+    "       )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rnn3.save_weights('model_3_weights.h5')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exceptional Credit"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
